# ChangeLog for media-video/transcode
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/transcode/ChangeLog,v 1.184 2007/08/15 15:05:40 beandog Exp $

*transcode-1.0.4_rc3 (15 Aug 2007)

  15 Aug 2007; Steve Dibb <beandog@gentoo.org> +transcode-1.0.4_rc3.ebuild:
  Version bump

*transcode-1.1.0_pre20070705 (27 Jul 2007)

  27 Jul 2007; Steve Dibb <beandog@gentoo.org>
  +transcode-1.1.0_pre20070705.ebuild:
  Version bump

*transcode-1.0.4_rc0 (26 Jul 2007)

  26 Jul 2007; Steve Dibb <beandog@gentoo.org> +transcode-1.0.4_rc0.ebuild:
  Version bump

  26 Jul 2007; Steve Dibb <beandog@gentoo.org> transcode-1.0.3-r1.ebuild:
  dosed -> sed, bug 179249

*transcode-1.0.3-r1 (26 Jul 2007)

  26 Jul 2007; Steve Dibb <beandog@gentoo.org>
  +files/transcode-1.0.3-tomsmocomp-gcc4.patch, +transcode-1.0.3-r1.ebuild:
  Fix tomsmocomp filter building against gcc4, bug 181239

  03 Jul 2007; Alexis Ballier <aballier@gentoo.org>
  +files/transcode-1.0.3-ffmpeg_codecs_are_not_in_public_api.patch,
  +files/transcode-1.0.3-libmpeg3-1.7.patch,
  -files/transcode-1.0.3_rc2_p20070310-libmpeg3.patch,
  transcode-1.0.3.ebuild:
  Fix to build with libmpeg3 1.7 and recent ffmpegs, closing bug #183965 and
  bug #184014

  31 May 2007; Markus Rothe <corsair@gentoo.org> transcode-1.0.3.ebuild:
  Do not break on ppc64 any more; use patch from previous versions

  19 May 2007; nixnut <nixnut@gentoo.org> transcode-1.0.3.ebuild:
  Stable on ppc wrt bug 178871

  19 May 2007; Markus Rothe <corsair@gentoo.org> transcode-1.0.3.ebuild:
  Stable on ppc64; bug #178871

  18 May 2007; Peter Weller <welp@gentoo.org> transcode-1.0.3.ebuild:
  Stable on amd64 wrt bug 178871

  17 May 2007; Raúl Porcel <armin76@gentoo.org> transcode-1.0.3.ebuild:
  x86 stable wrt #178871

  17 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  transcode-1.0.3.ebuild:
  Stable on sparc wrt #178871

*transcode-1.0.3 (20 Apr 2007)
