@@ -1,0 +1,3 @@
+MD5 e7661b105445b909007e4ccb89bad2f1 transcode-1.0.4rc6.tar.bz2 2274115
+RMD160 88468059d88bcc39a4f67c9f60e113f1ce5fc335 transcode-1.0.4rc6.tar.bz2 2274115
+SHA256 5169b54d06e1fba93cda2ceda8df7d16fb698c9abb44299baf835c8fecd6117a transcode-1.0.4rc6.tar.bz2 2274115
